# jupyterlab-myst

./: .copier-answers.yml  .eslintrc.js  .gitignore  .prettierignore  .stylelintignore  .stylelintrc  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  Untitled.ipynb  conftest.py  flake.nix  install.json  package-lock.json  package.json  package.jsonnet  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-test.txt  setup.py  tailwind.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yaml  config.yml  enhancement.md  enhancement.yml
.github/workflows/: build.yml  check-release.yml  docs.yml  full-release.yml  publish-release.yml  update-integration-tests.yml
binder/: environment.yml  postBuild
docs/: figures.md  index.md  myst.yml
examples/: display-markdown.ipynb  inline-interactivity.ipynb  inline.ipynb  myst_tests.ipynb  myst_tests.md  reacton.ipynb  simple.ipynb  trust.ipynb  untitled.md
jupyter-config/jupyter_server_config.d/: jupyterlab-myst.json
jupyter-config/nb-config/: jupyterlab_myst.json
jupyterlab_myst/: __init__.py  notary.py
jupyterlab_myst/labextension/: build_log.json  package.json
jupyterlab_myst/labextension/static/: lib_index_js.52d1cc29658e7d4b0081.js  lib_index_js.52d1cc29658e7d4b0081.js.map  lib_index_js.7ff5728e29fd37048fd7.js  lib_index_js.7ff5728e29fd37048fd7.js.map  lib_index_js.c4695079e58d1499ad9f.js  lib_index_js.c4695079e58d1499ad9f.js.map  lib_index_js.c86ceb62036b78e2930b.js  lib_index_js.c86ceb62036b78e2930b.js.map  remoteEntry.13323a079940fb6bea22.js.map  remoteEntry.514dad51ecd85021ffb0.js.map  remoteEntry.82781fe4cf45a9ab7178.js.map  remoteEntry.843e51537813e66bd510.js.map  remoteEntry.b8d26570a492a9079358.js  remoteEntry.b8d26570a492a9079358.js.map  style.js  style_index_js.c8bf313d2a84eacb357c.js  style_index_js.c8bf313d2a84eacb357c.js.map  style_index_js.cdf3f54ca9d4dcafc207.js  style_index_js.cdf3f54ca9d4dcafc207.js.map  vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_cssW-926fd9.57af04af61906ee77270.js  vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_cssW-926fd9.57af04af61906ee77270.js.map  vendors-node_modules_katex_dist_katex_js.81a4e8cfdbbb0f32038d.js  vendors-node_modules_katex_dist_katex_js.81a4e8cfdbbb0f32038d.js.map  vendors-node_modules_markdown-it-myst_dist_src_index_js.1dfc8d9dfce919fbe4b4.js  vendors-node_modules_markdown-it-myst_dist_src_index_js.1dfc8d9dfce919fbe4b4.js.map  vendors-node_modules_markdown-it_index_js.5573e92785e14a21d803.js  vendors-node_modules_markdown-it_index_js.5573e92785e14a21d803.js.map  vendors-node_modules_markdown-it_lib_common_utils_js.7616181535555f3b1d84.js  vendors-node_modules_markdown-it_lib_common_utils_js.7616181535555f3b1d84.js.map
jupyterlab_myst/tests/: __init__.py
jupyterlab_mystjs/: __init__.py
src/: CellMetadataProvider.tsx  JupyterCellProvider.tsx  MySTContentFactory.ts  MySTMarkdownCell.ts  MySTMarkdownCell.tsx  TaskItemControllerProvider.tsx  TextModelProvider.tsx  UserExpressionsProvider.tsx  actions.ts  bibliography.ts  blocks.ts  citations.tsx  globals.d.ts  icon.ts  images.ts  index.ts  inlineExpression.tsx  links.tsx  math.tsx  metadata.ts  mime.ts  mime.tsx  myst.ts  plugin.ts  renderers.ts  renderers.tsx  roles.ts  taskItem.tsx  tokens.ts  types.ts  typesetterProvider.tsx  userExpressions.ts  utils.ts  widget.tsx
src/__tests__/: jupyterlab_myst.spec.ts  jupyterlab_mystjs.spec.ts
src/builtins/: amsmath.ts  docutils.ts  front-matter.ts  index.ts  myst-extras.ts  sphinx-math.ts  tokens.ts
src/builtins/docutils/: constants.ts  directives.ts  index.ts  roles.ts
src/components/: index.tsx  inlineExpression.tsx  listItem.tsx
src/providers/: index.tsx  sanitizer.tsx  userExpressions.tsx
src/transforms/: anywidgets.ts  index.ts
style/: app.css  base.css  index.css  jupyterlab-typography.css  links.css  myst.css  preflight.css  tailwind.css
tests/: test_trust.py
tests/notebooks/: simple-code.ipynb  simple-markdown.ipynb
ui-tests/: README.md  jupyter_server_test_config.py  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml
ui-tests/tests/: files-run.spec.ts  jupyterlab_myst.spec.ts  jupyterlab_mystjs.spec.ts  notebook-run.spec.ts
ui-tests/tests/files/: directives.md  myst_tests.md  typography.md
ui-tests/tests/notebooks/: directives.ipynb  myst_tests.ipynb  typography.ipynb
