[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_myst"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jupyter_server>=2.0.1,<3;platform_system!='Emscripten'"
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter[server]>=0.6.0"
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_myst/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_myst/labextension" = "share/jupyter/labextensions/jupyterlab-myst"
"install.json" = "share/jupyter/labextensions/jupyterlab-myst/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "jupyterlab_myst/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_myst/labextension/static/style.js",
    "jupyterlab_myst/labextension/package.json",
]
skip-if-exists = ["jupyterlab_myst/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["pnpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["pnpm"]
source_dir = "src"
build_dir = "jupyterlab_myst/labextension"

[tool.jupyter-releaser]
# https://github.com/jtpio/xtralab/blob/fb4cac1be0732726c357402aa2dcd82caf832231/pyproject.toml#L112-L119
# Skip check-npm: it runs a fresh `npm install` on the built tarball (no
# lockfile), so a floating dependency range can pull a broken upstream release
# (e.g. @pierre/diffs 1.2.9 requiring the unpublished @pierre/theming). Our
# builds are reproducible from pnpm-lock.yaml, but a published package can't ship
# that lock. Revisit if the npm package must install standalone.
skip = ["check-npm"]

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    # Used by Jupyter Releaser
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "npm install -g pnpm@11.5.2",
    "pnpm ci",
    "pnpm run build:prod"
]
before-build-python = ["pnpm run clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
